--- a/ml2.ipynb
+++ b/ml2.ipynb
@@ -126,12 +126,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Note: you may need to restart the kernel to use updated packages.Requirement already satisfied: scikit-learn in c:\\users\\hp\\desktop\\ug model\\venv\\lib\\site-packages (1.4.1.post1)\n",
+      "Requirement already satisfied: scikit-learn in c:\\users\\hp\\desktop\\ug model\\venv\\lib\\site-packages (1.4.1.post1)\n",
       "Requirement already satisfied: numpy<2.0,>=1.19.5 in c:\\users\\hp\\desktop\\ug model\\venv\\lib\\site-packages (from scikit-learn) (1.26.4)\n",
       "Requirement already satisfied: scipy>=1.6.0 in c:\\users\\hp\\desktop\\ug model\\venv\\lib\\site-packages (from scikit-learn) (1.12.0)\n",
       "Requirement already satisfied: joblib>=1.2.0 in c:\\users\\hp\\desktop\\ug model\\venv\\lib\\site-packages (from scikit-learn) (1.3.2)\n",
       "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\hp\\desktop\\ug model\\venv\\lib\\site-packages (from scikit-learn) (3.3.0)\n",
-      "\n"
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
     {
@@ -1170,7 +1170,7 @@
    "outputs": [],
    "source": [
     "import pickle\n",
-    "with open('model.pkl', 'wb') as file:\n",
+    "with open('model2.pkl', 'wb') as file:\n",
     "    pickle.dump(regressor,file)"
    ]
   }
